Fix compilation and test issues.